<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sayarat.Fragments.Add_adv_adertiser_info_Fragment">
    <LinearLayout
        android:layout_marginTop="24dp"
        android:layout_marginRight="12dp"
        android:layout_marginLeft="12dp"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/red_frame"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_name"
                android:textColorHint="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:paddingRight="12dp"
                android:hint="@string/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/red_frame"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_email"
                android:textColorHint="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:paddingRight="12dp"
                android:hint="@string/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
        <FrameLayout
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="8dp"
            android:background="@drawable/red_frame"
            android:padding="8dp"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/input_phone"
                android:textColorHint="@color/colorPrimary"
                android:background="@android:color/transparent"
                android:paddingRight="12dp"
                android:hint="@string/phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>
    </LinearLayout>

    <Button
        android:id="@+id/continue_btt"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/accent_btn"
        android:layout_gravity="center|bottom"
        android:text="@string/continuee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
</android.support.v7.widget.CardView>
