<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <android.support.design.widget.AppBarLayout
        android:theme="@style/customToolBarTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:background="@color/colorPrimary"
            app:title=" "
            app:layout_anchorGravity="top"
            app:layout_collapseMode="pin"
            android:id="@+id/main_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?actionBarSize"
            app:theme="@style/customToolBarTheme"
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto">
            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:gravity="center|right"
                        android:id="@+id/main_toolbar_title"
                        android:textSize="18dp"
                        android:textColor="@color/white"
                        android:text="@string/contact_us"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent" />
                    <LinearLayout
                        android:gravity="left"
                        android:layout_marginLeft="12dp"
                        android:orientation="horizontal"
                        android:layout_gravity="center|left"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageButton
                            android:layout_margin="8dp"
                            android:id="@+id/main_toolbar_inbox"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_mail_white_24dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />
                        <ImageButton
                            android:layout_margin="8dp"
                            android:id="@+id/main_toolbar_search"
                            android:background="@android:color/transparent"
                            android:src="@drawable/ic_search_white_24dp"
                            android:layout_width="24dp"
                            android:layout_height="24dp" />

                    </LinearLayout>
                </LinearLayout>

            </FrameLayout>
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >
        <ImageView
            android:src="@drawable/bg"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

            <android.support.v7.widget.CardView
                app:cardUseCompatPadding="true"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="8dp">
                <android.support.v4.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="214dp"
                            android:src="@drawable/contactus"
                            android:layout_margin="12dp"
                            android:id="@+id/contact_us_img"/>
                        <ImageView
                            android:layout_width="200dp"
                            android:layout_gravity="center"
                            android:layout_height="200dp"
                            android:src="@drawable/logo"
                            android:layout_margin="12dp"
                            android:id="@+id/contact_us_logo"/>
                    </FrameLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/home_img"
                            android:layout_marginRight="8dp"
                            android:tint="@color/colorAccent"
                            android:src="@drawable/ic_home_white_24dp"/>
                        />
                        <TextView
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/browseWeb"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/website_link"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/phone_img"
                            android:layout_marginRight="8dp"
                            android:tint="@color/colorAccent"
                            android:src="@drawable/ic_call_white_24dp"/>
                        />
                        <TextView
                            android:layout_marginLeft="4dp"
                            android:layout_marginRight="4dp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/address"
                            />
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:textColor="@color/colorAccent"
                            android:text="@string/sayrat_address"
                            android:layout_marginLeft="24dp"
                            />
                    </LinearLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="3dp"
                        android:background="@color/gray200"
                        />
                    <EditText
                        android:id="@+id/input_name"
                        android:paddingRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:background="@drawable/red_border"
                        android:textColorHint="@color/colorAccent"
                        android:hint="@string/name"/>
                    <EditText
                        android:id="@+id/input_email"
                        android:paddingRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="36dp"
                        android:textColorHint="@color/colorAccent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/red_border"
                        android:hint="@string/email"/>
                    <EditText
                        android:id="@+id/input_mess"
                        android:paddingRight="8dp"
                        android:layout_width="match_parent"
                        android:layout_height="84dp"
                        android:textColorHint="@color/colorAccent"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/red_border"
                        android:hint="@string/message"/>
                    <Button
                        android:layout_marginBottom="12dp"
                        android:id="@+id/contact_us_btt"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="ارسل"
                        android:textColor="#FFF"
                        android:background="@drawable/accent_btn"/>

                </LinearLayout>
                </android.support.v4.widget.NestedScrollView>
            </android.support.v7.widget.CardView>
    <FrameLayout
        android:elevation="20dp"
        android:background="@color/scrim"
        android:visibility="gone"
        android:clickable="true"
        android:id="@+id/loadingSpinner"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ProgressBar
            android:visibility="visible"
            android:layout_gravity="center"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </FrameLayout>


    </FrameLayout>

</android.support.design.widget.CoordinatorLayout>